# MyShittyNoteAnalyser

./: .gitignore  LICENSE  README.md  env.yaml  pixi.toml  pyproject.toml
MyShittyNoteAnalyser/: __init__.py  app_state.py  audio_settings_widget.py  audio_stream_manager.py  constants.py  game_constants.py  game_coordinator.py  game_overlay.py  game_panel.py  game_settings_panel.py  gui.py  history_panel.py  hold_progress_bar.py  info_panel.py  instrument_notation.py  main.py  note_utils.py  panel_coordinator.py  pitch_detector.py  settings_panel.py  staff_canvas.py  theme.py  tuner_panel.py
tests/: test_app_state.py  test_pitch_detector.py
