[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "myshittynoteanalyser"
version = "0.1.0"
description = "Real-time pitch detection and note training game"
authors = [{name = "Nicolas", email = "nicolas@ardisoft.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23,<3",
    "PyQt6>=6.11.0,<7",
    "sounddevice>=0.5.5,<0.6",
]

[project.optional-dependencies]
aubio = ["aubio"]

[project.scripts]
noteio = "MyShittyNoteAnalyser.main:main"

[project.gui-scripts]
noteio-gui = "MyShittyNoteAnalyser.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["MyShittyNoteAnalyser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
